2005-11-29  Andy Wingo  <wingo@pobox.com>

	* pkgconfig/gstreamer-plugins-base.pc.in:
	* pkgconfig/gstreamer-plugins-base-uninstalled.pc.in:
	* gst-libs/gst/net/Makefile.am: Rename gstnet to gstnetbuffer
	(#322257).

2005-11-29  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/playback/gststreamselector.c: (gst_stream_selector_chain):
	3rd time's the charm. Correct ref-counting for discarded buffers.

2005-11-29  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/playback/gststreamselector.c:
	(gst_stream_selector_class_init),
	(gst_stream_selector_set_property),
	(gst_stream_selector_get_property),
	(gst_stream_selector_request_new_pad), (gst_stream_selector_chain):
	Fix ref-counting

2005-11-29  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/subparse/gstsubparse.c: (feed_textbuf):
	  Don't access already unref'ed buffer.

2005-11-29  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/playback/gststreamselector.c:
	(gst_stream_selector_class_init), (gst_stream_selector_init),
	(gst_stream_selector_dispose), (gst_stream_selector_set_property),
	(gst_stream_selector_get_property),
	(gst_stream_selector_get_linked_pad),
	(gst_stream_selector_request_new_pad), (gst_stream_selector_chain):
	* gst/playback/gststreamselector.h:
	Add the active-pad property for playbin to use shortly. Ignore buffers
	from any other pad, returning GST_FLOW_NOT_LINKED

2005-11-29  Julien MOUTTE  <julien@moutte.net>

	* ext/ogg/gstoggdemux.c: (gst_ogg_type_find): Free the list,
	patch from bug #322704 (Alessandro Decina).

2005-11-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst-libs/gst/audio/Makefile.am:
	  folded audiofilter into the audio library

2005-11-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/videoscale/gstvideoscale.h:
	* gst/videoscale/gstvideoscale.c:
	  remove unimplemented scale methods

2005-11-28  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_send_headers):
	  Don't leak caps.
