@@ -2,17 +2,7 @@ SUBDIRS = \
 	audio \
 	floatcast \
 	interfaces \
-	net \
-	riff \
-	rtp \
-	tag \
-	video
-
-DIST_SUBDIRS = \
-	audio \
-	floatcast \
-	interfaces \
-	net \
+	netbuffer \
 	riff \
 	rtp \
 	tag \
